logs/rft1d.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rft1d'...
Listing './lib/python3.5/site-packages/rft1d/data'...
Listing './lib/python3.5/site-packages/rft1d/data/weather'...
Listing './lib/python3.5/site-packages/rft1d/examples'...
Listing './lib/python3.5/site-packages/rft1d/examples/paper'...
Compiling './lib/python3.5/site-packages/rft1d/examples/paper/all_results.py'...
***   File "./lib/python3.5/site-packages/rft1d/examples/paper/all_results.py", line 70
    print 'Figure 1 (Page 2):'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rft1d/examples/paper/fig14_fwhm_estimation.py'...
***   File "./lib/python3.5/site-packages/rft1d/examples/paper/fig14_fwhm_estimation.py", line 44
    print 'Actual FWHM: %06.3f, estimated FWHM: %06.3f' %(w, np.mean(We[-1]))
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rft1d/examples/smoothness_estimation.py'...
***   File "./lib/python3.5/site-packages/rft1d/examples/smoothness_estimation.py", line 24
    print 'Actual FWHM: %06.3f, estimated FWHM: %06.3f' %(w, FWHMe[-1])
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rft1d/examples/smoothness_estimation_broken.py'...
***   File "./lib/python3.5/site-packages/rft1d/examples/smoothness_estimation_broken.py", line 28
    print 'Actual FWHM: %06.3f, estimated FWHM: %06.3f' %(w, FWHMe[-1])
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rft1d/examples/val_broken_4_X2.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (val_broken_4_X2.py, line 39)
Listing './lib/python3.5/site-packages/rft1d-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
